Fix for data-tooltip position jumping when zoomed

--- a/JsPlc.Ssc.PetrolPricing/JsPlc.Ssc.PetrolPricing.Portal/Content/infotips.css
+++ b/JsPlc.Ssc.PetrolPricing/JsPlc.Ssc.PetrolPricing.Portal/Content/infotips.css
@@ -8,12 +8,13 @@
     min-width: 10em;
     max-width: 60em;
     box-shadow: 2px 4px 8px #999;
+    font-size: 110%;
 }
 
 .infotip::after {
     border-color: #555 transparent transparent transparent;
     border-style: solid;
-    border-width: 10px;
+    border-width: 20px 5px 20px 5px;
     content: "";
     left: 50%;
     margin-left: -10px;
@@ -23,4 +24,9 @@
 
 [data-infotip]:hover {
     cursor: help;
+}
+
+.infotip b {
+    color: yellow;
+    text-shadow: 1px 1px 2px #000;
 }
